src/main/java/org/example/jjava_main/_core/error/ex/Exception404.java
package org.example.jjava_main._core.error.ex;

public class Exception404 extends RuntimeException {
    public Exception404(String message) {
        super(message);
    }
}
